--- a/core/u/libunwind/package.xml
+++ b/core/u/libunwind/package.xml
@@ -4,8 +4,7 @@
         <def name="BOLT_BUILD_DIR" value="build"/>
     </defines>
 
-    <source name="libunwind" repo="contrib"
-            architecture-independent="false">
+    <source name="libunwind" repo="core" architecture-independent="false">
         <description>
             <summary>library to determine the call-chain of a program - development</summary>
             <p>
