--- a/core/p/procps/package.xml
+++ b/core/p/procps/package.xml
@@ -37,8 +37,7 @@
         </patches>
 
         <requires>
-            <package name="libncurses5-dev"/>
-            <package name="libncursesw5-dev"/>
+            <package name="libncurses-dev"/>
             <package name="pkg-config"/>
         </requires>
 
