--- a/core/a/autogen/package.xml
+++ b/core/a/autogen/package.xml
@@ -42,12 +42,13 @@
         </patches>
 
         <requires>
-            <package name="automake-1.15"/>
+            <package name="autogen"/>
+            <package name="automake"/>
             <package name="autotools-dev"/>
             <package name="bash"/>
             <package name="gettext"/>
             <package name="gperf"/>
-            <package name="guile-2.0-dev"/>
+            <package name="guile-2.2-dev"/>
             <package name="libxml2-dev"/>
             <package name="pkg-config"/>
             <package name="tar"/>
