--- a/core/g/glib2.0/package.xml
+++ b/core/g/glib2.0/package.xml
@@ -56,6 +56,8 @@
             <package name="libselinux1-dev"/>
             <package name="libxml2-utils"/>
             <package name="libc-dev"/>
+            <package name="meson"/>
+            <package name="ninja-build"/>
             <package name="pkg-config"/>
             <package name="python3"/>
             <package name="tzdata"/>
