--- a/core/o/opkg/package.xml
+++ b/core/o/opkg/package.xml
@@ -39,8 +39,8 @@
             <package name="libbz2-dev"/>
             <package name="libcurl4-nss-dev"/>
             <package name="libexpat1-dev"/>
-            <package name="libsolv0-dev"/>
-            <package name="libsolvext0-dev"/>
+            <package name="libsolv-dev"/>
+            <package name="libsolvext-dev"/>
             <package name="liblzma-dev"/>
             <package name="nettle-dev"/>
             <package name="pkg-config"/>
