libucontext: package libucontext_posix separately

--- a/core/u/libucontext/package.xml
+++ b/core/u/libucontext/package.xml
@@ -27,6 +27,7 @@
     </source>
 
     <xi:include href="libucontext1.xml"/>
+    <xi:include href="libucontext-posix1.xml"/>
     <xi:include href="libucontext-dev.xml"/>
 
     <xi:include href="changelog.xml"/>
