ruby2.7: make sure libucontext is used also during configure tests

--- a/core/r/ruby2.7/package.xml
+++ b/core/r/ruby2.7/package.xml
@@ -54,6 +54,7 @@
         </patches>
 
         <requires>
+            <package name="bash"/>
             <package name="bison"/>
             <package name="chrpath"/>
             <package name="file"/>
