--- a/core/r/ruby2.7/package.xml
+++ b/core/r/ruby2.7/package.xml
@@ -69,6 +69,7 @@
             <package name="openssl"/>
             <package name="ruby2.7"/>
             <package name="tzdata"/>
+            <package name="libucontext-dev"/>
             <package name="zlib1g-dev"/>
         </requires>
 
