--- a/core/g/gdb/package.xml
+++ b/core/g/gdb/package.xml
@@ -4,7 +4,7 @@
         <def name="BOLT_BUILD_DIR" value="build"/>
     </defines>
 
-    <source name="gdb" repo="core" architecture-independent="false" build-for="cross-tools,target">
+    <source name="gdb" repo="core" architecture-independent="false">
         <description>
             <summary>GNU Debugger</summary>
             <p>
