strace: building against libunwind is not supported on s390x and riscv64

--- a/core/s/strace/package.xml
+++ b/core/s/strace/package.xml
@@ -41,7 +41,7 @@
         <requires>
             <package name="libc-dev"/>
             <package name="gawk"/>
-            <package name="libunwind-dev"/>
+            <package name="libunwind-dev" supported-on="!s390x,!riscv64"/>
         </requires>
 
         <xi:include href="rules.xml"/>
