--- a/core/d/distro-tools/package.xml
+++ b/core/d/distro-tools/package.xml
@@ -17,8 +17,11 @@
         <xi:include href="copyright.xml"/>
 
         <sources>
-            <file src="distro-tools-1.2.1.tar.gz" subdir="sources"
-                sha256sum="e289c006036d9446ac82af56e099e76a42cdd06c55a28909f5aedce713a0b647"/>
+            <file
+                subdir="sources"
+                src="distro-tools-1.3.0.tar.gz"
+                upstream-src="https://github.com/boltlinux/distro-tools/archive/refs/tags/1.3.0.tar.gz"
+                sha256sum="3738bb7259daa321ea6be6bab27fce6b6752e9e9d1c887b018c5ef7eedd51f74"/>
         </sources>
 
         <requires>
