--- a/core/d/distro-tools/package.xml
+++ b/core/d/distro-tools/package.xml
@@ -4,7 +4,7 @@
         <def name="BOLT_BUILD_DIR" value="build"/>
     </defines>
 
-    <source name="distro-tools" repo="core" architecture-independent="false" build-for="tools,target">
+    <source name="distro-tools" repo="core" architecture-independent="true" build-for="tools,target">
         <description>
             <summary>Bolt Linux distro tools</summary>
             <p>
