Make all relevant tools build depend on autotools-dev instead of tools-autotools-dev

--- a/core/c/chrpath/package.xml
+++ b/core/c/chrpath/package.xml
@@ -30,7 +30,7 @@
         </patches>
 
         <requires>
-            <package name="autotools-dev"/>
+            <package name="autotools-dev" tools-prefix=""/>
         </requires>
 
         <xi:include href="rules.xml"/>
