--- a/core/s/sqlite3/package.xml
+++ b/core/s/sqlite3/package.xml
@@ -37,7 +37,7 @@
             <package name="autoconf"/>
             <package name="libtool"/>
             <package name="automake"/>
-            <package name="autotools-dev"/>
+            <package name="autotools-dev" tools-prefix=""/>
             <package name="chrpath"/>
             <package name="libreadline-dev"/>
             <package name="tcl8.6-dev"/>
