--- a/core/a/acl/package.xml
+++ b/core/a/acl/package.xml
@@ -34,7 +34,7 @@
         </patches>
 
         <requires>
-            <package name="autotools-dev"/>
+            <package name="autotools-dev" tools-prefix=""/>
             <package name="autoconf"/>
             <package name="automake"/>
             <package name="gettext"/>
