--- a/core/a/autogen/package.xml
+++ b/core/a/autogen/package.xml
@@ -44,7 +44,7 @@
         <requires>
             <package name="autogen"/>
             <package name="automake"/>
-            <package name="autotools-dev"/>
+            <package name="autotools-dev" tools-prefix=""/>
             <package name="bash"/>
             <package name="gettext"/>
             <package name="gperf"/>
