--- a/core/a/libatomic-ops/package.xml
+++ b/core/a/libatomic-ops/package.xml
@@ -31,7 +31,7 @@
         </sources>
 
         <requires>
-            <package name="autotools-dev"/>
+            <package name="autotools-dev" tools-prefix=""/>
         </requires>
 
         <xi:include href="rules.xml"/>
