--- a/core/b/bash/package.xml
+++ b/core/b/bash/package.xml
@@ -61,7 +61,7 @@
 
         <requires>
             <package name="autoconf"/>
-            <package name="autotools-dev"/>
+            <package name="autotools-dev" tools-prefix=""/>
             <package name="bison"/>
             <package name="libncurses-dev"/>
             <package name="texinfo"/>
