--- a/core/b/bison/package.xml
+++ b/core/b/bison/package.xml
@@ -38,7 +38,7 @@
             <package name="gettext"/>
             <package name="flex"/>
             <package name="m4"/>
-            <package name="autotools-dev"/>
+            <package name="autotools-dev" tools-prefix=""/>
         </requires>
 
         <xi:include href="rules.xml"/>
