--- a/core/c/coreutils/package.xml
+++ b/core/c/coreutils/package.xml
@@ -46,7 +46,7 @@
 
         <requires>
             <package name="gettext"/>
-            <package name="autotools-dev"/>
+            <package name="autotools-dev" tools-prefix=""/>
             <package name="texinfo"/>
             <package name="libattr1-dev"/>
             <package name="libacl1-dev"/>
