--- a/core/c/libcap-ng/package.xml
+++ b/core/c/libcap-ng/package.xml
@@ -37,7 +37,7 @@
         </patches>
 
         <requires>
-            <package name="autotools-dev"/>
+            <package name="autotools-dev" tools-prefix=""/>
             <package name="libattr1-dev"/>
             <package name="linux-system-headers"/>
         </requires>
