--- a/core/d/db5.3/package.xml
+++ b/core/d/db5.3/package.xml
@@ -36,7 +36,7 @@
         </patches>
 
         <requires>
-            <package name="autotools-dev"/>
+            <package name="autotools-dev" tools-prefix=""/>
         </requires>
 
         <xi:include href="rules.xml"/>
