--- a/core/e/libevent/package.xml
+++ b/core/e/libevent/package.xml
@@ -34,7 +34,7 @@
 
         <requires>
             <package name="automake"/>
-            <package name="autotools-dev"/>
+            <package name="autotools-dev" tools-prefix=""/>
             <package name="libssl-dev"/>
         </requires>
 
