--- a/core/i/icu/package.xml
+++ b/core/i/icu/package.xml
@@ -30,7 +30,7 @@
         </patches>
 
         <requires>
-            <package name="autotools-dev"/>
+            <package name="autotools-dev" tools-prefix=""/>
         </requires>
 
         <xi:include href="rules.xml"/>
