--- a/core/m/mpdecimal/package.xml
+++ b/core/m/mpdecimal/package.xml
@@ -17,7 +17,7 @@
         </sources>
 
         <requires>
-            <package name="autotools-dev"/>
+            <package name="autotools-dev" tools-prefix=""/>
             <package name="libgmp-dev"/>
         </requires>
 
