--- a/core/r/readline/package.xml
+++ b/core/r/readline/package.xml
@@ -45,7 +45,7 @@
         <requires>
             <package name="libncurses-dev"/>
             <package name="texinfo"/>
-            <package name="autotools-dev"/>
+            <package name="autotools-dev" tools-prefix=""/>
         </requires>
 
         <xi:include href="rules.xml"/>
