--- a/core/t/texinfo/package.xml
+++ b/core/t/texinfo/package.xml
@@ -36,7 +36,7 @@
             <package name="libncurses-dev"/>
             <package name="gettext"/>
             <package name="help2man"/>
-            <package name="autotools-dev"/>
+            <package name="autotools-dev" tools-prefix=""/>
             <package name="libperl-dev"/>
             <package name="gawk"/>
         </requires>
