--- a/core/u/libunistring/package.xml
+++ b/core/u/libunistring/package.xml
@@ -33,7 +33,7 @@
         </patches>
 
         <requires>
-            <package name="autotools-dev"/>
+            <package name="autotools-dev" tools-prefix=""/>
             <package name="autoconf"/>
         </requires>
 
