--- a/core/y/libyaml/package.xml
+++ b/core/y/libyaml/package.xml
@@ -21,7 +21,7 @@
         </sources>
 
         <requires>
-            <package name="autotools-dev"/>
+            <package name="autotools-dev" tools-prefix=""/>
         </requires>
 
         <xi:include href="rules.xml"/>
