--- a/core/g/guile-2.2/package.xml
+++ b/core/g/guile-2.2/package.xml
@@ -55,6 +55,7 @@
             <package name="libgc-dev"/>
             <package name="libffi-dev"/>
             <package name="pkg-config"/>
+            <package name="guile-2.2" target-prefix="tools-"/>
         </requires>
 
         <xi:include href="rules.xml"/>
