--- a/core/a/acl/package.xml
+++ b/core/a/acl/package.xml
@@ -2,10 +2,10 @@
 <control xmlns:xi="http://www.w3.org/2001/XInclude">
     <source name="acl" repo="core" architecture-independent="false" build-for="tools,target">
         <description>
-            <summary>Access control list utilities</summary>
+            <summary>Access control list management</summary>
             <p>
-            This package contains the getfacl and setfacl utilities needed for
-            manipulating access control lists.
+            Tools and programming interfaces for manipulating access control
+            lists (ACL) on filesystems that support them.
             </p>
         </description>
 
