--- a/core/a/autogen/package.xml
+++ b/core/a/autogen/package.xml
@@ -2,7 +2,7 @@
 <control xmlns:xi="http://www.w3.org/2001/XInclude">
     <source name="autogen" repo="core" architecture-independent="false" build-for="tools,target">
         <description>
-            <summary>automated text file generator</summary>
+            <summary>Automated text file generator</summary>
             <p>
             AutoGen is a tool designed for generating program files that contain
             repetitive text with varied substitutions. This is especially valuable if
