--- a/core/g/guile-2.2/package.xml
+++ b/core/g/guile-2.2/package.xml
@@ -10,8 +10,8 @@
             <p>
             Guile is a Scheme implementation designed for real world programming,
             providing a rich Unix interface, a module system, an interpreter, and
-            many extension languages. Guile can be used as a standard #! style
-            interpreter, via #!/usr/bin/guile, or as an extension language for
+            many extension languages. Guile can be used as a standard <tt>#!</tt> style
+            interpreter, via <tt>#!/usr/bin/guile</tt>, or as an extension language for
             other applications via libguile.
             </p>
         </description>
