libcap2: is in core repo

--- a/core/c/libcap2/package.xml
+++ b/core/c/libcap2/package.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <control xmlns:xi="http://www.w3.org/2001/XInclude">
-    <source name="libcap2" repo="contrib" architecture-independent="false">
+    <source name="libcap2" repo="core" architecture-independent="false">
         <description>
             <summary>POSIX 1003.1e capabilities handling</summary>
             <p>
